# RandomVoxelEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RandomVoxelEngine.sln  RandomVoxelEngine.vcxproj  RandomVoxelEngine.vcxproj.filters  perlin.cpp  run.sh
.cache/clangd/index/: _fixes.hpp.4F9A7583CC37FB9C.idx  _vectorize.hpp.D331FB3F020562A8.idx  camera.cpp.6BA9CBF5BA005B92.idx  camera.hpp.6DAE1A24EF39E0BC.idx  common.hpp.B87B49DD1D2B04F5.idx  compute_common.hpp.6AD847891A966EF5.idx  compute_vector_relational.hpp.FB779C199FF01E9E.idx  constants.hpp.BA1CF046557EF2DB.idx  constants.inl.C15AE8E622898B93.idx  dual_quaternion.hpp.DA4ED3BBBF37705A.idx  dual_quaternion.inl.28E195E77B722820.idx  epsilon.hpp.35F35ECBAC686E7D.idx  epsilon.inl.FF4A4EC325C9F0E4.idx  exponential.hpp.5762BB0199C8B2F9.idx  func_common.inl.E65BDE6E6E55B062.idx  func_exponential.inl.8ADB77BD5583CEB6.idx  func_geometric.inl.CB5D649D7EEC875F.idx  func_integer.inl.C803F282339873F8.idx  func_matrix.inl.5AAE2E93CCECA214.idx  func_packing.inl.D8081994E627E96B.idx  func_trigonometric.inl.C8B6784B1B0D6E1A.idx  func_vector_relational.inl.79BC5C9329E69480.idx  fwd.hpp.942B0E780199F452.idx  geometric.hpp.2EB75B3C2939DE9C.idx  glad.c.2BADD5BD7835D49B.idx  glad.h.B33D3FD59437CA72.idx  glm.hpp.685EA084B24BF7B4.idx  (+170 more)
RandomVo.99530869/Debug/: vc143.idb
include/glad/: CMakeLists.txt  glad.c  glad.h
src/: CMakeLists.txt  main.cpp
src/Shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/utils/: camera.cpp  camera.hpp  chunk.hpp  perlin.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
(+20 files in other folders)
